--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
 
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.3.0'
     compile group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.3.0'
+
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
