--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,12 @@ dependencies {
     compile group: 'com.google.dagger', name: 'dagger', version: '2.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
 
+    compile 'com.github.florent37:materialviewpager:1.2.3'
+
+    //dependencies
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
+    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
