--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".android.activity.MainActivity"
+            android:name=".android.activity.AuthorizationActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".android.activity.DrawerActivity"></activity>
+        <activity android:name=".android.activity.DrawerActivity" />
+        <activity android:name=".android.activity.MainActivity" />
     </application>
 
 </manifest>
