--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
     <application
         android:name=".android.rest.utils.QitApi"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/qit_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/qit_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -23,8 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".android.activity.DrawerActivity" />
         <activity android:name=".android.activity.MainActivity" />
+        <activity android:name=".android.activity.QitActivity" />
     </application>
 
 </manifest>
