--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.flaviofaria:kenburnsview:1.0.7'
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
     compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.github.clans:fab:1.6.4'
 
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
