create Activities for questionnaires and interviews creation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         </activity>
         <activity android:name=".android.activity.MainActivity" />
         <activity android:name=".android.activity.QitActivity" />
+        <activity android:name=".android.activity.QuestionnaireCreationActivity" />
+        <activity android:name=".android.activity.InterviewCreationActivity"></activity>
     </application>
 
 </manifest>
