--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.github.clans:fab:1.6.4'
+    compile 'com.wdullaer:materialdatetimepicker:3.5.1'
 
     implementation 'com.android.support:cardview-v7:26.1.0'
 }
