--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     compile 'com.wdullaer:materialdatetimepicker:3.5.1'
 
     implementation 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.wdullaer:materialdatetimepicker:3.5.1'
 }
