--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
 
     implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'com.wdullaer:materialdatetimepicker:3.5.1'
+    compile 'org.greenrobot:eventbus:3.1.1'
 }
