--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'com.wdullaer:materialdatetimepicker:3.5.1'
     compile 'org.greenrobot:eventbus:3.1.1'
+
+    compileOnly 'org.projectlombok:lombok:1.16.18'
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.1'
+    annotationProcessor 'org.projectlombok:lombok:1.16.18'
 }
