add pass Questionnaire object to another activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".android.activity.MainActivity" />
         <activity android:name=".android.activity.QitActivity" />
         <activity android:name=".android.activity.QuestionnaireCreationActivity" />
-        <activity android:name=".android.activity.InterviewCreationActivity"></activity>
+        <activity android:name=".android.activity.InterviewCreationActivity" />
+        <activity android:name=".android.activity.QuestionsCreationActivity"></activity>
     </application>
 
 </manifest>
