add api for questions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".android.activity.QitActivity"
+            android:name=".android.activity.AuthorizationActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,10 +24,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".android.activity.MainActivity" />
-        <!--<activity android:name=".android.activity.QitActivity" />-->
+        <activity android:name=".android.activity.QitActivity" />
         <activity android:name=".android.activity.QuestionnaireCreationActivity" />
         <activity android:name=".android.activity.InterviewCreationActivity" />
-        <activity android:name=".android.activity.QuestionsCreationActivity"></activity>
+        <activity android:name=".android.activity.QuestionsCreationActivity" />
+        <activity android:name=".android.activity.QuestionnaireAnswersActivity" />
+        <activity android:name=".android.activity.RegistrationActivity"></activity>
     </application>
 
 </manifest>
