--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.16.18'
     compileOnly 'javax.annotation:javax.annotation-api:1.3.1'
     annotationProcessor 'org.projectlombok:lombok:1.16.18'
+
+    // CHAT DEPENDENCY
+    compile 'com.github.stfalcon:chatkit:0.2.2'
+    // GRAPHICK DEPENDENCY
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
 
 
