--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/qit_logo"
         android:supportsRtl="true"
-        android:windowSoftInputMode="stateHidden"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:windowSoftInputMode="stateHidden">
         <activity
             android:name=".android.activity.SplashActivity"
             android:screenOrientation="portrait"
@@ -33,7 +33,11 @@
         <activity android:name=".android.activity.QuestionnaireAnswersActivity" />
         <activity android:name=".android.activity.RegistrationActivity" />
         <activity android:name=".android.activity.AuthorizationActivity" />
-        <activity android:name=".android.activity.NewEventOrChoseEventActivity"></activity>
+        <activity android:name=".android.activity.NewEventOrChoseEventActivity" />
+        <activity
+            android:name=".android.activity.GraphicActivity"
+            android:label="@string/title_activity_graphic"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
