--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "qit.com.questionnaire_interview_test_android"
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion 21
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -20,38 +21,37 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.0.0-beta1'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.google.firebase:firebase-auth:11.0.4'
-    implementation 'com.google.firebase:firebase-database:11.0.4'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:support-annotations:26.1.0'
+    configurations.all {
+        exclude group: 'com.android.support', module: 'support-v13'
+    }
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:support-v4:27.1.1'
+
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.google.firebase:firebase-auth:15.1.0'
+    implementation 'com.google.firebase:firebase-database:15.0.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:support-annotations:27.1.1'
     implementation('com.mikepenz:materialdrawer:6.0.2@aar') {
         transitive = true
     }
+    implementation 'com.github.angads25:toggle:1.0.0'
 
     compile group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.3.0'
     compile group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.3.0'
     compile group: 'com.google.dagger', name: 'dagger', version: '2.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
-
-    compile 'com.github.florent37:materialviewpager:1.2.3'
-
     //dependencies
+    compile 'com.github.florent37:materialviewpager:1.2.3'
     compile 'com.flaviofaria:kenburnsview:1.0.7'
     compile 'com.jpardogo.materialtabstrip:library:1.1.0'
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.wdullaer:materialdatetimepicker:3.5.1'
 
-
-    implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'com.wdullaer:materialdatetimepicker:3.5.1'
     compile 'org.greenrobot:eventbus:3.1.1'
 
@@ -61,14 +61,24 @@ dependencies {
 
     // CHAT DEPENDENCY
     compile 'com.github.stfalcon:chatkit:0.2.2'
+
     // GRAPHICK DEPENDENCY
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
-    //
+    //GIF DEPENDENCY
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
+
+    //Custom CheckBox
+    compile 'net.igenius:customcheckbox:1.3'
+
+    // cardView custom
+    compile 'com.loopeer.lib:shadow:0.0.4-beta3'
+
+    //SDP library
+    implementation 'com.intuit.sdp:sdp-android:1.0.5'
+
+    //SSP library
+    implementation 'com.intuit.ssp:ssp-android:1.0.5'
 }
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
