--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,33 +21,44 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".android.activity.MainActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".android.activity.QitActivity"
-            android:screenOrientation="portrait"
-            android:largeHeap="true"/>
-        <activity android:name=".android.activity.QuestionnaireCreationActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".android.activity.InterviewCreationActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".android.activity.QuestionsCreationActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".android.activity.QuestionnaireAnswersActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".android.activity.RegistrationActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".android.activity.AuthorizationActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".android.activity.NewEventOrChoseEventActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".android.activity.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".android.activity.QitActivity"
+            android:largeHeap="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".android.activity.QuestionnaireCreationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".android.activity.InterviewCreationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".android.activity.QuestionsCreationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".android.activity.QuestionnaireAnswersActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".android.activity.RegistrationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".android.activity.AuthorizationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".android.activity.NewEventOrChoseEventActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".android.activity.GraphicActivity"
             android:label="@string/title_activity_graphic"
-            android:theme="@style/AppTheme"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".android.activity.InterviewCustomChatActivity"></activity>
     </application>
 
 </manifest>
